--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "arg": "^4.1.1",
     "esm": "^3.2.25",
     "inquirer": "^6.5.0",
+    "moment": "^2.24.0",
     "node-google-calendar": "^1.1.1"
   }
 }
