--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "esm": "^3.2.25",
     "inquirer": "^6.5.0",
     "moment": "^2.24.0",
+    "moment-timezone": "^0.5.26",
     "node-google-calendar": "^1.1.1"
   }
 }
