--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "MIT",
   "dependencies": {
     "arg": "^4.1.1",
+    "commander": "^2.20.0",
     "esm": "^3.2.25",
     "inquirer": "^6.5.0",
     "moment": "^2.24.0",
